--- a/index.css
+++ b/index.css
@@ -11,8 +11,8 @@
   font-style: normal;
   font-weight: 400;
   src: local("Roboto Slab"),
-       url("roboto.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url("roboto.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+       url("roboto-slab.woff2") format("woff2"), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url("roboto-slab.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 @font-face {
   font-family: "Noto Sans Japanese";
